--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,5 +10,6 @@
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script type="module" src="/admin/preview-template.js"></script>
   </body>
 </html>
