--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,6 +10,19 @@
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-    <script type="module" src="/admin/preview-template.js"></script>
+
+    <!-- Customize the netlify identity widget to refresh on logout preventing users from using the cms when not logged in and then seeing an error -->
+    <script is:inline>
+      netlifyIdentity.on("logout", () => location.reload());
+    </script>
+
+    <script>
+      // @ts-expect-error CMS is defined globally
+      // eslint-disable-next-line
+      CMS.registerPreviewStyle("/admin/global.css");
+    </script>
+
+    <!-- Only showing body in preview panel -->
+    <script src="/admin/preview-template.js"></script>
   </body>
 </html>
